--- a/manifest.json
+++ b/manifest.json
@@ -1,17 +1,14 @@
 {
-	"name": "Beyond 20",
-	"version": "2.2.1",
+	"name": "Green Room",
+	"version": "1.0.0",
 	"manifest_version": 2,
 	"description": "Integrates the D&D Beyond Character Sheets with Roll20 and Foundry VTT.",
 	"permissions": [
 		"activeTab",
 		"tabs",
 		"storage",
-		"*://beyond20.kicks-ass.org/roll",
-		"*://app.roll20.net/editor/",
 		"*://*.dndbeyond.com/*",
-		"*://*.forge-vtt.com/game",
-		"*://*.astraltabletop.com/play/*"
+		"*://*.forge-vtt.com/game"
 	],
 	"icons": {
 		"16": "images/icons/icon16.png",
@@ -52,6 +49,23 @@
 		]
 	},
 	"content_scripts": [
+		{
+			"matches": [
+				"*://*.dndbeyond.com/*sources/*"
+			],
+			"css": [
+				"libs/css/alertify.css",
+				"libs/css/alertify-themes/default.css",
+				"libs/css/alertify-themes/beyond20.css",
+				"dist/beyond20.css"
+			],
+			"js": [
+				"libs/alertify.min.js",
+				"libs/jquery-3.4.1.min.js",
+				"dist/dndbeyond_source.js"
+			],
+			"all_frames": true
+		},
 		{
 			"matches": [
 				"*://*.dndbeyond.com/*characters/*"
