--- a/manifest_ff.json
+++ b/manifest_ff.json
@@ -8,10 +8,8 @@
 		"tabs",
 		"storage",
 		"*://beyond20.kicks-ass.org/roll",
-		"*://app.roll20.net/editor/",
 		"*://*.dndbeyond.com/*",
-		"*://*/*game",
-		"*://*.astraltabletop.com/play/*"
+		"*://*/*game"
 	],
 	"browser_specific_settings": {
 		"gecko": {
